--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </p>
     <h3>Todo</h3>
     <ul id="incompleteTasks">
-      <li><input type="checkbox">
+      <li>
+        <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button
