--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf"
-      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
-    </a>
+    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
@@ -28,8 +26,7 @@
         <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
-        <button
-          class="edit">Edit</button>
+        <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
@@ -37,12 +34,10 @@
       <li class="editMode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
-        <input type="text"
-          value="Go Shopping" class="task">
+        <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img
-            src="./remove.svg">
+            <img src="./remove.svg">
           </button>
         </li>
     </ul>
@@ -51,8 +46,7 @@
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
-        <input type="text"
-          class="task">
+        <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
