--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="aaa">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="picture of logo">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="centered-main-page-element">
@@ -31,7 +31,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="">
             </button>
           </li>
         <li class="editMode">
@@ -40,7 +40,7 @@
           <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="">
             </button>
           </li>
       </ul>
@@ -54,7 +54,7 @@
           <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="">
             </button>
         </li>
       </ul>
