refactor(basic 3.1): fix name class and id

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main" id="main">
-    <section>
-      <div class="add-item" id="add-item">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
+    <section class="add-item" id="add-item">
+      
+      <label for="new-task">Add Item</label>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
       </div>
     </section>
     <section class="in-complete-tasks">
